<resources>
    <string name="app_name">Spot Iklan</string>
    <string name="title_activity_maps">Map</string>
    <string name="server_client_id">YOUR_SERVER_CLIENT_ID</string>
    <string name="logo">Google Logo</string>
    <string name="logo_description">Spot-Iklan\n Sign-in QuickStart</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_out_message">Signed out</string>
    <string name="signed_out_label">Signed Out</string>
    <string name="sign_out_button_label">Sign Out</string>
    <string name="disconnect_label_button">Disconnect</string>
    <string name="APP_PREFERENCE">SpotPref</string>
    <string name="google_id">GoogleID</string>
    <string name="username">username</string>
    <string name="profile_key">profile_key</string>
    <string name="name_edit_hint">Name</string>
    <string name="address_edit_hint">Address</string>
    <string name="image_profile_descriptor">Image Profile</string>
    <string name="gender_list_prompt">Choose Gender</string>
    <string name="female_radio_text">Female</string>
    <string name="male_radio_text">Male</string>
    <string name="driver_license_edit_hint">Driver License ID</string>
    <string name="identity_card_edit_hint">Identity card</string>
    <string name="birthday_edit_hint">Birthday</string>
</resources>
