<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rubahapi.iklaniku.MainActivity"
    android:orientation="vertical"
    android:weightSum="4">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/activity_form"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            android:background="#e3e6e8">
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:id="@+id/google_icon"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="100dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/googleg_color"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/logo_description"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="36sp"/>
            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signed_out_label"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#bababa">
            <!--<com.google.android.gms.common.SignInButton-->
            <!--android:id="@+id/sign_in_button"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_centerInParent="true"-->
            <!--android:visibility="visible"-->
            <!--tools:visibility="gone"-->
            <!--android:layout_marginTop="10dp"/>-->
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sign_in_button"
                android:layout_centerInParent="true"
                android:text="@string/common_signin_button_text_long"
                android:visibility="visible"
                tools:visibility="gone"/>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sign_out_and_disconnect"
                android:layout_centerInParent="true"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:visibility="gone"
                tools:visibility="visible">
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sign_out_button_label"
                    android:id="@+id/sign_out_button"
                    style="?android:attr/buttonBarButtonStyle"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/disconnect_button"
                    android:text="@string/disconnect_label_button"
                    style="?android:attr/buttonBarButtonStyle"
                    />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
